fixed problem of the tooltip appearing behind the chart

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -62,6 +62,7 @@ body {
   padding: 8px;
   min-width: 100px;
   color: #333;
+  z-index: 10000000;
 }
 
 #remove-filtering {
